--- a/index.css
+++ b/index.css
@@ -1963,3 +1963,117 @@ margin-bottom: 27px;
 }
 
 
+
+
+/* кутузовский страница */
+
+.location{
+    margin-top: 25px;
+    margin-left: 25px;
+}
+
+.project_portolio{
+    margin-bottom: 0;
+}
+
+
+.project__container_square{
+    font-weight: 600;
+    font-size: 16.2789px;
+    line-height: 30px;
+    color: black;
+}
+
+.project__container_rooms{
+    font-weight: 600;
+    font-size: 16.2789px;
+    line-height: 30px;
+    color: black;
+    text-align: end;
+}
+
+.project__container_group2_top{
+    margin-bottom: -95px;
+}
+
+.project__container_metre_portolio{
+    font-weight: 600;
+    font-size: 33.4184px;
+    line-height: 45px;
+}
+
+.project__container_cuantity-rooms{
+    font-weight: 600;
+    font-size: 33.4184px;
+    line-height: 45px;
+}
+
+.project__container_subtitle_portfolio{
+    font-weight: 300;
+}
+
+.location__title{
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
+
+.location__subtitle{
+    margin-bottom: 25px;
+    max-width: 340px;
+    line-height: 21px;
+}
+
+.project-kutuz{
+    margin-left: 25px;
+}
+
+.project-kutuz__image{
+    margin-bottom: 25px;
+}
+
+.project__container_navigation{
+    display: flex;
+    text-align: end;
+    max-width: 340px;
+    flex-direction: column;
+}
+
+.projects{
+    margin-left: 25px;
+}
+
+.projects__container{
+    width: 258px;
+}
+
+.project-kutuz__link{
+    color: black;
+    margin-bottom: 9px;
+}
+
+.project-kutuz__image_link{
+    margin-bottom: 25px;
+}
+
+.projects__link{
+    color: black;
+    font-size: 25px;
+}
+
+.projects__text_link{
+    max-width: 258px;
+    margin: 0;
+    margin-bottom: 28px;
+}
+
+
+
+
+/*метрополия*/
+
+.location__list{
+    max-width: 340px;
+    margin-left: 25px;
+    margin-bottom: 25px;
+}
