--- a/index.css
+++ b/index.css
@@ -39,8 +39,9 @@ ul{
     border: none;
     height: 85px;
     backdrop-filter: blur(7px);
-    position: relative;
     z-index: 5;
+    position: sticky;
+    top: 0;
     }
 }
 
@@ -356,7 +357,7 @@ position: relative;
 
 @media screen and (max-width:425px) {
     .design__btn{
-        margin-top: 315px;
+        margin-top: 120px;
         background: transparent;
         border: 1px solid white;
     }
@@ -1594,7 +1595,8 @@ margin-bottom: 24px;
 
 @media screen and (max-width:425px) {
     .solution__container_title{
-        font-size: 23px;
+        font-size: 1em;
+        font-weight: 600;
         margin-top: 23.9px;
         margin-bottom: 12px;
     }
