--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 );
 
 .page{
-    font-family: 'RalewayRegular', 'Arial', 'sans-serif';
+    font-family: 'RalewayRegular', 'sans-serif';
     margin: 0 auto;
     padding: 0;
     max-width: 1440px;
