--- a/index.css
+++ b/index.css
@@ -867,12 +867,14 @@ background: #F9F5F2;
 }
 
 .project__btn_text{
+    color: black;
     font-weight: 400;
 font-size: 30px;
     margin: 0;
     margin-left: 33px;
     margin-right: 30px;
     margin-top: 22.5px;
+    text-decoration:none
 }
 
 @media screen and (max-width:425px) {
