--- a/index.css
+++ b/index.css
@@ -1052,6 +1052,7 @@ margin-left: 100px
 @media screen and (max-width:425px) {
     .clients{
        overflow: hidden;
+       margin-top: 107px;
     }
 }
 
