--- a/index.css
+++ b/index.css
@@ -55,8 +55,7 @@ ul{
 
 @media screen and (max-width: 425px) {
     .da{
-    background-image: url(./image/кухня-гост_06\,2_CShading_LightMix\ 1.png);
-    overflow:hidden;
+    background-image: url(./image/blurrr\ 1.png);
     background-size: cover
     }
 }
@@ -151,10 +150,11 @@ ul{
 
 .header__menu_burgers{
     right: 0;
-    background-color: red;
+    background-color: #F9F5F2;
     list-style: none;
     padding: 0;
     margin: 0;
+    padding: 15px 0 15px 0;
     position: fixed;
     z-index: 101;
     top: 74px;
@@ -268,7 +268,7 @@ line-height: 108.02%;
 @media screen and (max-width: 768px) {
     .design__title{
         width: 295px;
-        height: 230px;
+        height: 177px;
         padding-left: 30px;
         padding-top: 102px;
         padding-right: 25px;
@@ -280,11 +280,12 @@ line-height: 108.02%;
 
 @media screen and (max-width: 425px) {
     .design__title{
-        font-size: 40.2376px;
+        font-size: 35px;
         padding: 40px 0px 0px 23px;
         -webkit-backdrop-filter: blur(4px);
-        width: 383px;
+        width: 356px;
         border-bottom-right-radius: 240px;
+        border: none;
     }
     
 }
@@ -315,11 +316,13 @@ padding-top: 33px;
         padding: 0;
         margin-left: auto;
         text-align: end;
-        width: 250px;
+        width: 187px;
+        font-size: 15px;
+        line-height: 14.5px;
         padding-right: 21px;
         color: black;
         margin-top: 26px;
-        padding-right: 50px;
+        padding-right: 25px;
     }
 }
 
@@ -356,13 +359,14 @@ position: relative;
 
 @media screen and (max-width:1200px) {
     .design__btn{
-        margin-left: 54px;
+        margin-left: 16px;
+        margin-bottom: 36px;
     }
-}
+    }
 
 @media screen and (max-width:425px) {
     .design__btn{
-        margin-top: 120px;
+        margin-top: 176px;
         background: transparent;
         border: 1px solid white;
     }
@@ -1249,6 +1253,7 @@ margin-top: -63px;
         margin-left: 40px;
         margin-top: 35px;
         margin-right: 20px;
+        font-size: 14px;
     }
 }
 
