--- a/index.css
+++ b/index.css
@@ -1825,6 +1825,7 @@ margin-bottom: 115px;
     line-height: 24px;
     border: 1px solid;
     padding: 0;
+    border-radius: 0px;
     /* background: black; */
 }
 
