--- a/index.css
+++ b/index.css
@@ -1823,7 +1823,7 @@ margin-bottom: 115px;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
-    border: 1px solid;
+    border: 1px white;
     padding: 0;
     border-radius: 0px;
     /* background: black; */
